# nullable

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .pymarkdown.yaml  CITATION.cff  CMakeLists.txt  Makefile  README.md  requirements-dev.in  requirements-dev.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml
cmake/: gcovr.cfg.in  use-fetch-content.cmake
docs/: debug-ci.md
etc/: clang-21-toolchain.cmake
examples/: CMakeLists.txt  README.md
include/beman/nullable/: CMakeLists.txt  nullable.hpp
papers/: .gitignore
tests/beman/nullable/: CMakeLists.txt  nullable.t.cpp
